[tool.poetry]
name = "python-llamafile"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.35.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
